force-app/main/default/objects/Loginzeiten_Maklerportal__c/Loginzeiten_Maklerportal__c.object-meta.xml
<CustomObject>
    <description>Die Loginzeiten der Immobenutzer mit Daten wie beispielsweise der IP Adresse</description>
    <label>Loginzeiten Maklerportal</label>
    <nameField>
        <label>Loginzeiten-Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loginzeiten</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>