force-app/main/default/objects/Loginzeiten_Maklerportal__c/fields/Browser__c.field-meta.xml
<CustomField>
    <fullName>Browser__c</fullName>
    <description>Der Browser des Users zum Zeitpunkt des Logins</description>
    <inlineHelpText>Der Browser des Users zum Zeitpunkt des Logins</inlineHelpText>
    <label>Browser</label>
    <length>250</length>
    <type>Text</type>
</CustomField>