force-app/main/default/objects/Loginzeiten_Maklerportal__c/fields/Immo_Benutzer__c.field-meta.xml
<CustomField>
    <fullName>Immo_Benutzer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Der zugehörige Immobenutzer</description>
    <inlineHelpText>Der zugehörige Immobenutzer</inlineHelpText>
    <label>Immo Benutzer</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Realty_User__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Realty_User__c</referenceTo>
    <relationshipLabel>Loginzeiten</relationshipLabel>
    <relationshipName>Loginzeiten</relationshipName>
    <type>Lookup</type>
</CustomField>