force-app/main/default/objects/Loginzeiten_Maklerportal__c/fields/IP_Adresse__c.field-meta.xml
<CustomField>
    <fullName>IP_Adresse__c</fullName>
    <description>Die IP Adresse des Users zum Zeitpunkt des Logins</description>
    <inlineHelpText>Die IP Adresse des Users zum Zeitpunkt des Logins</inlineHelpText>
    <label>IP Adresse</label>
    <length>50</length>
    <type>Text</type>
</CustomField>