force-app/main/default/objects/Loginzeiten_Maklerportal__c/fields/Loginzeit__c.field-meta.xml
<CustomField>
    <fullName>Loginzeit__c</fullName>
    <description>Der Zeitpunkt des Logins</description>
    <inlineHelpText>Der Zeitpunkt des Logins</inlineHelpText>
    <label>Loginzeit</label>
    <type>DateTime</type>
</CustomField>