force-app/main/default/objects/Loginzeiten_Maklerportal__c/listViews/Support_Loginzeiten_Maklerportal.listView-meta.xml
<ListView>
    <fullName>Support_Loginzeiten_Maklerportal</fullName>
    <filterScope>Queue</filterScope>
    <label>Support</label>
    <queue>Support</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>